example/k8s/jenkins_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  namespace: jenkins
spec:
  backend:
    serviceName: jenkins-ui
    servicePort: 8080
